--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
    <script src="assets/vendor/countdowntime/countdowntime.js"></script>
  <!--===============================================================================================-->
    <script src="assets/js/main.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
